project/static/css/styles.css
.content {
  bottom: 0px;
  display: flex;
  left: 0px;
  margin: 15px;
  overflow: auto;
  padding: 5px;
  position: absolute;
  right: 0px;
  top: 50px;
}

.captioner-container {
  margin: auto;
}

.dropzone {
  border-color: rgb(102, 102, 102);
  border-radius: 5px;
  border-style: dashed;
  border-width: 2px;
  cursor: pointer;
  height: 350px;
  width: 350px;
}

.dropzone.active {
  background-color: #eee;
  border-style: solid;
}

.dropzone .placeholder {
  display: flex;
  flex-direction: column;
  height: 100%;
  justify-content: center;
  text-align: center;
  width: 100%;
}

.dropzone .placeholder .glyphicon {
  font-size: 80px;
}

.image-preview-container img.spinner {
  height: 200px;
  width: 200px;
}

.thumbnail {
  margin: auto;
}

.thumbnail-container img:not(.spinner) {
  min-height: 86px;
  min-width: 173px;
  max-height: 342px;
  max-width: 692px;
  object-fit: contain;
}

.caption {
  overflow: auto;
  word-break: break-all;
  word-wrap: break-word;
}

.caption img.spinner {
  height: 20px;
  width: 20px;
}

.viewer {
  border-width: 1px;
  border-color: #ddd;
  border-radius: 4px;
  border-style: solid;
  margin: 0 auto;
  position: relative;
  width: 65%;
}

.viewer .controls {
  background-color: white;
  border-radius: 4px 4px 0px 0px;
  box-shadow: 0px 2px 2px lightgray;
  display: flex;
  height: 50px;
  overflow: auto;
  position: absolute;
  top: 0px;
  width: 100%;
  z-index: 10;
}

.viewer .controls .pagination {
  margin: auto;
}

.viewer .pane {
  border-radius: 0px 0px 4px 4px;
  bottom: 0px;
  margin-top: 50px;
  overflow: auto;
  position: absolute;
  top: 0px;
  width: 100%;
}

.viewer .pane .status {
  align-items: center;
  bottom: 0px;
  display: flex;
  flex-direction: column;
  justify-content: center;
  margin-bottom: 50px;
  position: absolute;
  top: 0px;
  width: 100%;
}

